// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prettyConsoleFormat basic should support Object message 1`] = `
"info:
{ one: [33m1[39m, two: [33m2[39m, three: [33m3[39m }"
`;

exports[`prettyConsoleFormat basic should support colored string message 1`] = `"info: [2mThe quick brown fox jumps over the lazy dog[22m"`;

exports[`prettyConsoleFormat basic should support multiple mixed Object values 1`] = `
"info: [34m[TEST]:[39m
{ one: [33m1[39m, two: [33m2[39m }
[ [33m3[39m, [33m4[39m, [33m5[39m ]"
`;

exports[`prettyConsoleFormat basic should support multiple mixed values extra 1`] = `
"info: [34m[TEST]:[39m [1mnull[22m [90mundefined[39m one [33m2[39m
{ [32m'3'[39m: [33m3[39m, [32m'4'[39m: [32m'4'[39m }"
`;

exports[`prettyConsoleFormat basic should support multiple mixed values extra more 1`] = `
"info: [34m[TEST]:[39m [33mBombastic[39m
[36m[Function][39m
[31m/foo/[39m"
`;

exports[`prettyConsoleFormat basic should support multiple string values 1`] = `"info: The quick brown fox [2mjumps over[22m the lazy dog"`;

exports[`prettyConsoleFormat basic should support simple string message 1`] = `"info: The quick brown fox jumps over the lazy dog"`;

exports[`prettyConsoleFormat errors should support Object message and error value 1`] = `
"error:
{ one: [33m1[39m, two: [33m2[39m }
Error: Why u broke, ha?
    at Object.it (/Users/alex/www/Node/Personal/winston-format-pretty-console/src/index.spec.js:187:19)
    at Object.asyncJestTest (/Users/alex/www/Node/Personal/winston-format-pretty-console/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:102:37)
    at resolve (/Users/alex/www/Node/Personal/winston-format-pretty-console/node_modules/jest-jasmine2/build/queueRunner.js:43:12)
    at new Promise (<anonymous>)
    at mapper (/Users/alex/www/Node/Personal/winston-format-pretty-console/node_modules/jest-jasmine2/build/queueRunner.js:26:19)
    at promise.then (/Users/alex/www/Node/Personal/winston-format-pretty-console/node_modules/jest-jasmine2/build/queueRunner.js:73:41)
    at process._tickCallback (internal/process/next_tick.js:68:7)"
`;

exports[`prettyConsoleFormat errors should support error value 1`] = `
"error: 
Error: Why u broke, ha?
    at Object.it (/Users/alex/www/Node/Personal/winston-format-pretty-console/src/index.spec.js:104:19)
    at Object.asyncJestTest (/Users/alex/www/Node/Personal/winston-format-pretty-console/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:102:37)
    at resolve (/Users/alex/www/Node/Personal/winston-format-pretty-console/node_modules/jest-jasmine2/build/queueRunner.js:43:12)
    at new Promise (<anonymous>)
    at mapper (/Users/alex/www/Node/Personal/winston-format-pretty-console/node_modules/jest-jasmine2/build/queueRunner.js:26:19)
    at promise.then (/Users/alex/www/Node/Personal/winston-format-pretty-console/node_modules/jest-jasmine2/build/queueRunner.js:73:41)
    at process._tickCallback (internal/process/next_tick.js:68:7)"
`;

exports[`prettyConsoleFormat errors should support error value with extra Object values 1`] = `
"error: 
Error: Why u broke, ha?
    at Object.it (/Users/alex/www/Node/Personal/winston-format-pretty-console/src/index.spec.js:124:19)
    at Object.asyncJestTest (/Users/alex/www/Node/Personal/winston-format-pretty-console/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:102:37)
    at resolve (/Users/alex/www/Node/Personal/winston-format-pretty-console/node_modules/jest-jasmine2/build/queueRunner.js:43:12)
    at new Promise (<anonymous>)
    at mapper (/Users/alex/www/Node/Personal/winston-format-pretty-console/node_modules/jest-jasmine2/build/queueRunner.js:26:19)
    at promise.then (/Users/alex/www/Node/Personal/winston-format-pretty-console/node_modules/jest-jasmine2/build/queueRunner.js:73:41)
    at process._tickCallback (internal/process/next_tick.js:68:7)
{ one: [33m1[39m, two: [33m2[39m }
[ [33m3[39m, [33m4[39m, [33m5[39m ]"
`;

exports[`prettyConsoleFormat errors should support error value with extra primitive values 1`] = `
"error:
Error: Why u broke, ha?
    at Object.it (/Users/alex/www/Node/Personal/winston-format-pretty-console/src/index.spec.js:144:19)
    at Object.asyncJestTest (/Users/alex/www/Node/Personal/winston-format-pretty-console/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:102:37)
    at resolve (/Users/alex/www/Node/Personal/winston-format-pretty-console/node_modules/jest-jasmine2/build/queueRunner.js:43:12)
    at new Promise (<anonymous>)
    at mapper (/Users/alex/www/Node/Personal/winston-format-pretty-console/node_modules/jest-jasmine2/build/queueRunner.js:26:19)
    at promise.then (/Users/alex/www/Node/Personal/winston-format-pretty-console/node_modules/jest-jasmine2/build/queueRunner.js:73:41)
    at process._tickCallback (internal/process/next_tick.js:68:7)
 [33m123[39m 456"
`;

exports[`prettyConsoleFormat errors should support message and error value 1`] = `
"error: [34m[ERR]:[39m
Error: Why u broke, ha?
    at Object.it (/Users/alex/www/Node/Personal/winston-format-pretty-console/src/index.spec.js:164:19)
    at Object.asyncJestTest (/Users/alex/www/Node/Personal/winston-format-pretty-console/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:102:37)
    at resolve (/Users/alex/www/Node/Personal/winston-format-pretty-console/node_modules/jest-jasmine2/build/queueRunner.js:43:12)
    at new Promise (<anonymous>)
    at mapper (/Users/alex/www/Node/Personal/winston-format-pretty-console/node_modules/jest-jasmine2/build/queueRunner.js:26:19)
    at promise.then (/Users/alex/www/Node/Personal/winston-format-pretty-console/node_modules/jest-jasmine2/build/queueRunner.js:73:41)
    at process._tickCallback (internal/process/next_tick.js:68:7)"
`;

exports[`prettyConsoleFormat errors should support message with extra value and then error value 1`] = `
"error: [34m[ERR]:[39m [33m123[39m
Error: Why u broke, ha?
    at Object.it (/Users/alex/www/Node/Personal/winston-format-pretty-console/src/index.spec.js:213:19)
    at Object.asyncJestTest (/Users/alex/www/Node/Personal/winston-format-pretty-console/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:102:37)
    at resolve (/Users/alex/www/Node/Personal/winston-format-pretty-console/node_modules/jest-jasmine2/build/queueRunner.js:43:12)
    at new Promise (<anonymous>)
    at mapper (/Users/alex/www/Node/Personal/winston-format-pretty-console/node_modules/jest-jasmine2/build/queueRunner.js:26:19)
    at promise.then (/Users/alex/www/Node/Personal/winston-format-pretty-console/node_modules/jest-jasmine2/build/queueRunner.js:73:41)
    at process._tickCallback (internal/process/next_tick.js:68:7)"
`;

exports[`prettyConsoleFormat with other formatters should support format.colorize() 1`] = `"[32minfo[39m: The quick brown fox jumps over the lazy dog"`;

exports[`prettyConsoleFormat with other formatters should support format.timestamp() 1`] = `" - info: The quick brown fox jumps over the lazy dog"`;
